# AVGZERO

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  package.json
cmake/: CompilerFlags.cmake  Dependencies.cmake  Wasm.cmake
docs/: architecture.md
docs/api/: cpp_api.md  js_api.md
docs/tutorials/: getting_started.md  writing_scripts.md
scripts/: build.bat  build.sh  build_wasm.bat  build_wasm.sh  build_web.bat  build_web.sh  clean.bat  clean.sh  deploy.bat  deploy.sh  dev_server.bat  dev_server.sh  run.js
src/core/: avg_engine.cpp  avg_engine.h  dialogue_node.h  game_state.cpp  game_state.h
src/exports/: wasm_exports.cpp  wasm_exports.h
src/memory/: allocator.cpp  allocator.h
src/utils/: simple_json.cpp  simple_json.h  string_utils.cpp  string_utils.h
web/assets/data/: config.json  script.json
web/src/: index.html  main.js
web/src/css/: game.css  main.css  ui.css
web/src/js/engine/: AVGEngine.js  MemoryManager.js  WasmLoader.js
web/src/js/game/: ChoiceUI.js  DialogueUI.js  Game.js  SaveSystem.js  SceneManager.js
web/src/js/renderer/: BackgroundRenderer.js  CharacterRenderer.js  Renderer.js  TextRenderer.js
web/src/js/utils/: AssetLoader.js  AudioManager.js  EventBus.js
